feat(security): autenticacion JWT, autorizacion por rol y validacion de registro
- Login/registro con token JWT firmado (HS256), sesion sin estado
- SecurityConfig cierra por defecto y abre solo lo necesario por rol
- Corrige perfil editable por cualquiera y catalogo escribible sin sesion
- La API deja de exponer el hash de la contrasena
- Valida en el servidor nombre, correo, telefono y fuerza de contrasena
  (min 8 caracteres, mayuscula, minuscula, numero y simbolo)
- Swagger UI con boton Authorize para probar endpoints protegidos